[package]
name = "extract_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lender = {version = "0.2.9", optional = true}
serde = { version = "1.0.197", optional = true }

[features]
serde = ["dep:serde"]
iter_mut = ["dep:lender"]

[dev-dependencies]
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
